--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     <!-- Your main view, should have "view-main" class -->
     <div class="view view-main">
       <!-- Pages container, because we use fixed navbar and toolbar, it has additional appropriate classes-->
-      <div class="pages navbar-fixed toolbar-fixed">
+      <div class="pages navbar-fixed">
         <!-- Page, "data-page" contains page name -->
         <div data-page="index" class="page">
 
@@ -31,20 +31,21 @@
             <div class="navbar-inner">
               <div class="center">find my books</div>
               <div class="right">
-                  <a href="about.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">filter-fill</i></a>
-                  <a href="#" class="link icon-only"><i class="f7-icons">search_strong</i></a>
+                  <a href="about.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">add</i></a>
+                  <!-- <a href="about.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">filter-fill</i></a>
+                  <a href="#" class="link icon-only"><i class="f7-icons">search_strong</i></a> -->
               </div>
             </div>
           </div>
 
           <!-- Toolbar. In Material theme it should be inside of the page-->
-          <div class="toolbar toolbar-bottom">
+          <!-- <div class="toolbar toolbar-bottom">
             <div class="toolbar-inner">
-              <!-- Toolbar links -->
+
               <a href="#" class="link icon-only"><i class="f7-icons">book</i></a>
-              <a href="#" class="link icon-only"><i class="f7-icons">add</i></a>
+              <a href="about.html" class="link icon-only"><i class="f7-icons">add</i></a>
             </div>
-          </div>
+          </div> -->
 
           <!-- Scrollable page content -->
           <div class="page-content">
@@ -72,7 +73,7 @@
                     </div>
                   {{/each}}
                 </script>
-                
+
               </div>
             </div>
           </div>
