Changed tab spacing & added input form

--- a/www/about.html
+++ b/www/about.html
@@ -2,23 +2,28 @@
 
 <!-- Top Navbar-->
 <div class="pages">
-    <div data-page="about" class="page">
+  <div data-page="about" class="page">
 
-      <div class="navbar">
-          <div class="navbar-inner">
-              <div class="left">
-                  <a href="#" class="back link">
-                      <i class="icon icon-back"></i>
-                      <span>Back</span>
-                  </a>
-              </div>
-          </div>
-      </div>
-
-      <div class="page-content">
-          <div class="content-block">
-            ddd
-          </div>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="left">
+          <a href="#" class="back link">
+            <i class="icon icon-back"></i>
+            <span>Back</span>
+          </a>
+        </div>
       </div>
     </div>
+
+    <div class="page-content">
+      <div class="content-block">
+        <form class="searchbar">
+          <div class="searchbar-input">
+            <input type="search" placeholder="Search"><a href="#" class="searchbar-clear"></a>
+          </div>
+        </form>
+      </div>
+    </div>
+
+  </div>
 </div>
