--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
   <!-- Your app title -->
   <title>My App</title>
   <!-- Path to Framework7 Library CSS, Material Theme -->
-  <link rel="stylesheet" href="lib/framework7/css/framework7.material.min.css">
+  <link rel="stylesheet" href="lib/framework7/css/framework7.material.css">
   <link rel="stylesheet" href="lib/framework7/css/framework7.material.colors.min.css">
   <link rel="stylesheet" href="lib/framework7/css/framework7.icons.css">
 
