added buttons for scan and search

--- a/www/about.html
+++ b/www/about.html
@@ -17,11 +17,15 @@
 
     <div class="page-content">
       <div class="content-block">
-        <form class="searchbar">
+        <form class="searchbar search-form">
           <div class="searchbar-input">
             <input type="search" placeholder="Search"><a href="#" class="searchbar-clear"></a>
           </div>
         </form>
+        <p class="buttons-row">
+          <a href="#" class="button button-big button-fill button-raised color-pink">Scan</a>
+          <a href="#" class="button button-big button-fill button-raised color-teal">Search</a>
+        </p>
       </div>
     </div>
 
