forgot to change data-page value to add

--- a/www/add.html
+++ b/www/add.html
@@ -2,7 +2,7 @@
 
 <!-- Top Navbar-->
 <div class="pages">
-  <div data-page="about" class="page">
+  <div data-page="add" class="page">
 
     <div class="navbar">
       <div class="navbar-inner">
