Added specific classes for buttons

--- a/www/add.html
+++ b/www/add.html
@@ -19,12 +19,12 @@
       <div class="content-block">
         <form class="searchbar search-form">
           <div class="searchbar-input">
-            <input type="search" placeholder="Search"><a href="#" class="searchbar-clear"></a>
+            <input type="search" placeholder="Search" class="search">
           </div>
         </form>
         <p class="buttons-row">
-          <a href="#" class="button button-big button-fill button-raised color-pink">Scan</a>
-          <a href="#" class="button button-big button-fill button-raised color-teal">Search</a>
+          <a href="#" class="button button-big button-fill button-raised color-pink scan-btn">Scan</a>
+          <a href="#" class="button button-big button-fill button-raised color-teal search-btn">Search</a>
         </p>
       </div>
     </div>
