Implemented add functionality from entered isbn
Moved code into seperat files

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="lib/framework7/css/framework7.icons.css">
 
   <link rel="stylesheet" href="css/styles.css">
-</head> 
+</head>
 <body>
   <!-- Views -->
   <div class="views">
@@ -31,7 +31,7 @@
             <div class="navbar-inner">
               <div class="center">find my books</div>
               <div class="right">
-                  <a href="about.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">add</i></a>
+                  <a href="add.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">add</i></a>
                   <!-- <a href="about.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">filter-fill</i></a>
                   <a href="#" class="link icon-only"><i class="f7-icons">search_strong</i></a> -->
               </div>
@@ -85,5 +85,8 @@
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/dbhandler.js"></script>
+  <script type="text/javascript" src="js/home.js"></script>
+  <script type="text/javascript" src="js/add.js"></script>
 </body>
 </html>
