--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
               <div class="center">find my books</div>
               <div class="right">
                   <a href="add.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">add</i></a>
+                  <a href="settings.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">gear</i></a>
                   <!-- <a href="about.html" data-view=".view-main" class="link icon-only"><i class="f7-icons">filter-fill</i></a>
                   <a href="#" class="link icon-only"><i class="f7-icons">search_strong</i></a> -->
               </div>
@@ -90,7 +91,6 @@
   <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
   <script type="text/javascript" src="js/dbhandler.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
-  <script type="text/javascript" src="js/internet.js"></script>
   <script type="text/javascript" src="js/home.js"></script>
   <script type="text/javascript" src="js/add.js"></script>
 </body>
