--- a/www/add.html
+++ b/www/add.html
@@ -9,7 +9,7 @@
         <div class="left">
           <a href="#" class="back link">
             <i class="icon icon-back"></i>
-            <span>Back</span>
+            <span>Add book</span>
           </a>
         </div>
       </div>
