Added form to change api server

--- a/www/settings.html
+++ b/www/settings.html
@@ -2,7 +2,7 @@
 
 <!-- Top Navbar-->
 <div class="pages">
-  <div data-page="add" class="page">
+  <div data-page="settings" class="page">
 
     <div class="navbar">
       <div class="navbar-inner">
@@ -17,7 +17,26 @@
 
     <div class="page-content">
       <div class="content-block">
-
+        <div class="list-block">
+          <ul>
+            <li>
+              <div class="item-content">
+                <div class="item-media"><i class="f7-icons">cloud</i></div>
+                <div class="item-inner">
+                  <div class="item-title floating-label">API</div>
+                  <div class="item-input">
+                    <input type="text" name="name">
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <p class="buttons-row">
+                <a href="#" class="button button-raised button-fill color-blue">Save</a>
+              </p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
