--- a/www/index.html
+++ b/www/index.html
@@ -93,5 +93,6 @@
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/home.js"></script>
   <script type="text/javascript" src="js/add.js"></script>
+  <script type="text/javascript" src="js/settings.js"></script>
 </body>
 </html>
