Changed layout of add page
Scan button is on the top right now

--- a/www/add.html
+++ b/www/add.html
@@ -12,20 +12,43 @@
             <span>Add book</span>
           </a>
         </div>
+        <div class="right">
+            <a class="link icon-only scan-btn"><i class="f7-icons">camera</i></a>
+        </div>
       </div>
     </div>
-
     <div class="page-content">
       <div class="content-block">
-        <form class="searchbar search-form">
+        <!-- <form class="searchbar search-form">
           <div class="searchbar-input">
             <input type="search" placeholder="Search" class="search">
           </div>
         </form>
         <p class="buttons-row">
-          <a href="#" class="button button-big button-fill button-raised color-pink scan-btn">Scan</a>
-          <a href="#" class="button button-big button-fill button-raised color-teal search-btn">Search</a>
-        </p>
+          <a href="#" class="button button-raised button-fill color-blue search-btn">Search</a>
+        </p> -->
+
+        <div class="list-block">
+          <ul>
+            <li>
+              <div class="item-content">
+                <div class="item-media"><i class="f7-icons">search</i></div>
+                <div class="item-inner">
+                  <div class="item-title floating-label">ISBN</div>
+                  <div class="item-input">
+                    <input type="text" name="isbn" class="search">
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <p class="buttons-row">
+                <a href="#" class="button button-raised button-fill color-blue search-btn">search</a>
+              </p>
+            </li>
+          </ul>
+        </div>
+
       </div>
     </div>
 
