Corrected display bugs

--- a/www/settings.html
+++ b/www/settings.html
@@ -22,17 +22,17 @@
             <li>
               <div class="item-content">
                 <div class="item-media"><i class="f7-icons">cloud</i></div>
-                <div class="item-inner">
+                <div class="item-inner focus-state">
                   <div class="item-title floating-label">API</div>
-                  <div class="item-input">
-                    <input type="text" name="name">
+                  <div class="item-input item-input-field focus-state">
+                    <input type="text" name="API" class="api-url focus-state">
                   </div>
                 </div>
               </div>
             </li>
             <li>
               <p class="buttons-row">
-                <a href="#" class="button button-raised button-fill color-blue">Save</a>
+                <a href="#" class="button button-raised button-fill color-blue save-btn">Save</a>
               </p>
             </li>
           </ul>
