--- a/www/index.html
+++ b/www/index.html
@@ -94,5 +94,6 @@
   <script type="text/javascript" src="js/home.js"></script>
   <script type="text/javascript" src="js/add.js"></script>
   <script type="text/javascript" src="js/settings.js"></script>
+  <script type="text/javascript" src="js/detail.js"></script>
 </body>
 </html>
