--- a/www/add.html
+++ b/www/add.html
@@ -9,9 +9,9 @@
         <div class="left">
           <a href="#" class="back link">
             <i class="icon icon-back"></i>
-            <span>Add book</span>
           </a>
         </div>
+        <div class="center">Add a book</div>
         <div class="right">
             <a class="link icon-only scan-btn"><i class="f7-icons">camera</i></a>
         </div>
