--- a/www/settings.html
+++ b/www/settings.html
@@ -9,9 +9,9 @@
         <div class="left">
           <a href="#" class="back link">
             <i class="icon icon-back"></i>
-            <span>Settings</span>
           </a>
         </div>
+        <div class="center">Settings</div>
       </div>
     </div>
 
