Changed name of book detail container

--- a/www/detail.html
+++ b/www/detail.html
@@ -17,7 +17,7 @@
 
     <div class="page-content">
       <div class="content-block">
-        <div class="book-data">
+        <div class="book-detail-container">
           <script id="book-detail-template" type="text/template7">
             <div class="book book-detail no-shadow">
               <div class="row">
