Data from db is added to template

--- a/www/detail.html
+++ b/www/detail.html
@@ -18,16 +18,17 @@
     <div class="page-content">
       <div class="content-block">
         <div class="book-detail-container">
+
           <script id="book-detail-template" type="text/template7">
             <div class="book book-detail no-shadow">
               <div class="row">
-                <div class="col-100 book-title">Gone Girl</div>
+                <div class="col-100 book-title">{{title}}</div>
               </div>
               <div class="row">
-                <div class="col-33 book-cover"><img src="img/nocover.jpg" alt=""></div> <!-- image style : width 100% -->
+                <div class="col-33 book-cover"><img src="{{cover}}" alt=""></div> <!-- image style : width 100% -->
                 <div class="col-66 book-info">
                   <div class="row">
-                    <div class="col-100 book-author">Gillian Flynn</div>
+                    <div class="col-100 book-author">{{author}}</div>
                     <div class="col-50 book-read"><i class="f7-icons">eye</i></div>
                     <div class="col-50 book-favorite"><i class="f7-icons">star</i></div>
                     <div class="col-100 book-rate"><span class="score">{{rate}}</span> / <span class="max">10</span></div>
@@ -41,6 +42,7 @@
               </div>
             </div>
           </script>
+          
         </div>
 
       </div>
