--- a/www/add.html
+++ b/www/add.html
@@ -13,7 +13,7 @@
         </div>
         <div class="center">Add a book</div>
         <div class="right">
-            <a class="link icon-only scan-btn"><i class="f7-icons">camera</i></a>
+            <a class="link icon-only scan-btn"><i class="material-icons">camera_alt</i></a>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
           <ul>
             <li>
               <div class="item-content">
-                <div class="item-media"><i class="f7-icons">search</i></div>
+                <div class="item-media"><i class="material-icons md-36">search</i></div>
                 <div class="item-inner">
                   <div class="item-title floating-label">ISBN</div>
                   <div class="item-input">
