--- a/www/settings.html
+++ b/www/settings.html
@@ -21,7 +21,7 @@
           <ul>
             <li>
               <div class="item-content">
-                <div class="item-media"><i class="f7-icons">cloud</i></div>
+                <div class="item-media"><i class="material-icons md-36">cloud_queue</i></div>
                 <div class="item-inner focus-state">
                   <div class="item-title floating-label">API</div>
                   <div class="item-input item-input-field focus-state">
