Manage when no code is given

--- a/www/add.html
+++ b/www/add.html
@@ -36,14 +36,14 @@
                 <div class="item-inner">
                   <div class="item-title floating-label">ISBN</div>
                   <div class="item-input">
-                    <input type="text" name="isbn" class="search">
+                    <input type="number" name="isbn" class="search">
                   </div>
                 </div>
               </div>
             </li>
             <li>
               <p class="buttons-row">
-                <a href="#" class="button button-raised button-fill color-blue search-btn">search</a>
+                <a href="#" class="button button-raised button-fill color-blue search-btn" disabled>search</a>
               </p>
             </li>
           </ul>
