Added warning message

--- a/www/settings.html
+++ b/www/settings.html
@@ -16,6 +16,9 @@
     </div>
 
     <div class="page-content">
+      <div class="content-block-title warning">
+        <i class="material-icons">warning</i> <span>Application import may cease to function</span>
+      </div>
       <div class="content-block">
         <div class="list-block">
           <ul>
